--- a/koebe/graphics/flask/templates/multiview.html
+++ b/koebe/graphics/flask/templates/multiview.html
@@ -34,14 +34,30 @@
 
     <script>
 
-        window.createSketchViewS2 = (model) => function (p, scene_id) {
+        var mouseDraggedCanvas = null;
+        var mouseDraggedSceneId = -1;
+
+        var sketch3d = null;
+
+        function update_scenes(data) {
+            for (let i = 0; i < data.scene_updates.length; i++) {
+                let scene_update = data.scene_updates[i];
+                if (scene_update.objects != null) {
+                    models[scene_update.scene_id]["objects"] = JSON.parse(scene_update.objects);
+                }
+            }
+        }
+
+        window.createSketchViewS2 = (model, scene_id) => function (p) {
             
             p.setup = function() {
                 let w = 500;
                 let h = 500;
-                p.createCanvas(w, h, p.WEBGL);
+                let canvas = p.createCanvas(w, h, p.WEBGL);
                 p.zoom = 1;
                 p.frame = 0;
+                p.scene_id = scene_id;
+                sketch3d = p;
             }
             
             p.setStyle = function(style) {
@@ -215,13 +231,87 @@
             }
         }
 
-        window.createSketchViewE2 = (model) => function (p, scene_id) {
+        window.createSketchViewE2 = (model, scene_id) => function (p) {
             
             p.setup = function() {
                 let w = 500;
                 let h = 500;
 
-                p.createCanvas(w, h);
+                let canvas = p.createCanvas(w, h);
+                the_canvas = canvas;
+                canvas.mousePressed(function() {
+
+                    mouseDraggedCanvas = canvas; 
+                    mouseDraggedSceneId = scene_id;
+            
+                    const response = fetch('/event', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({ type: 'mouse_pressed', scene_id: scene_id, x: p.mouseX, y: p.mouseY })
+                    });
+
+                    response.then( response => response.json() )
+                    .then( data => {
+                        update_scenes(data);
+                    });
+
+                    p.mouseMoved = function() {
+                        if (mouseDraggedCanvas != null) {
+                            const response = fetch('/event', {
+                                method: 'POST',
+                                headers: {
+                                    'Content-Type': 'application/json'
+                                },
+                                body: JSON.stringify({ type: 'mouse_dragged', scene_id: mouseDraggedSceneId, x: p.mouseX, y: p.mouseY })
+                            });
+
+                            response.then( response => response.json() )
+                            .then( data => {
+                                update_scenes(data);
+                            });
+                        }
+                    };
+
+                    p.mouseReleased = function() {
+                        if (mouseDraggedCanvas != null) {
+                            const response = fetch('/event', {
+                                method: 'POST',
+                                headers: {
+                                    'Content-Type': 'application/json'
+                                },
+                                body: JSON.stringify({ type: 'mouse_released', scene_id: mouseDraggedSceneId, x: p.mouseX, y: p.mouseY })
+                            });
+
+                            response.then( response => response.json() )
+                            .then( data => {
+                                update_scenes(data);
+                            });
+
+                            mouseDraggedCanvas = null;
+                        }
+                    };
+                });
+
+                canvas.mouseMoved(function() {
+                    const response = fetch('/event', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({ type: mouseDraggedCanvas == null ? 'mouse_moved' : 'mouse_dragged', 
+                                                scene_id: mouseDraggedCanvas == null ? scene_id : mouseDraggedSceneId, 
+                                                x: p.mouseX, 
+                                                y: p.mouseY })
+                    });
+
+                    response.then( response => response.json() )
+                    .then( data => {
+                        update_scenes(data);
+                    });
+                });
+
                 p.zoom = 1;
                 p.canvasScale = 1;
                 p.frame = 0;
@@ -340,6 +430,7 @@
                 }
                 
             }
+
         }
 
         /*let main_view = document.getElementById("main_view");
@@ -348,6 +439,10 @@
         let sketchView = window.createSketchView(model);
 
         var sketch = new p5(sketchView, main_view)*/
+    </script>
+    <script>
+
+        let models = [];
 
         {% for scene in scenes: %}
         let div_elem_{{loop.index0}} = document.getElementById('scene_{{loop.index0}}');
@@ -358,7 +453,10 @@
         let sketch_view_{{loop.index0}} = window.createSketchViewE2(model_{{loop.index0}}, {{loop.index0}});
         {% endif %}
         let sketch_{{loop.index0}} = new p5(sketch_view_{{loop.index0}}, div_elem_{{loop.index0}});
+
+        models.push(model_{{loop.index0}});
         {% endfor %}
+
     </script>
 
 <!--     
