--- a/koebe/graphics/flask/templates/multiview.html
+++ b/koebe/graphics/flask/templates/multiview.html
@@ -9,20 +9,22 @@
             padding: 10px;
             width: 100%;
         }
-        .widget {
-            width: 600px;
+        {% for scene in scenes: %}
+        .widget{{loop.index0}} {
+            width: {{scene["width"]}}px;
             float: left;
             border: 1px solid gray;
             padding: 10px;
             margin: 10px;
         }
+        {% endfor %}
     </style>
 </head>
 <body>
     
     <section class="widgets_container">
     {% for scene in scenes: %}
-        <div class="widget">
+        <div class="widget{{loop.index0}}">
             {% if scene["title"] != "": %}
             <h3>{{scene["title"]}} ({{scene["type"]}})</h3>
             {% endif %}
@@ -51,11 +53,11 @@
             }
         }
 
-        window.createSketchViewS2 = (model, scene_id) => function (p) {
+        window.createSketchViewS2 = (model, scene_id, width, height) => function (p) {
             
             p.setup = function() {
-                let w = 600;
-                let h = 600;
+                let w = width;
+                let h = height;
                 let canvas = p.createCanvas(w, h, p.WEBGL);
                 p.zoom = 1;
                 p.frame = 0;
@@ -93,7 +95,7 @@
                     p.noStroke();
                     p.fill(100, 125, 255);
                 }
-                p.box(0.035);
+                p.box(0.015);
             }
             
             p.drawDiskS2 = function (diskData) {
@@ -234,7 +236,7 @@
             }
         }
 
-        window.createSketchViewE2 = (model, scene_id) => function (p) {
+        window.createSketchViewE2 = (model, scene_id, scale, width, height) => function (p) {
             
 
                 // x  = (screenx - p.canvasScale * p.width * 0.5) * p.canvasScale
@@ -249,8 +251,8 @@
             }
 
             p.setup = function() {
-                let w = 600;
-                let h = 600;
+                let w = width;
+                let h = height;
 
                 let canvas = p.createCanvas(w, h);
                 the_canvas = canvas;
@@ -334,7 +336,7 @@
                 });
 
                 p.zoom = 1;
-                p.canvasScale = 1;
+                p.canvasScale = 1 / scale;
                 p.frame = 0;
             }
             
@@ -348,11 +350,11 @@
                 }
                 
                 if ("strokeWeight" in style) {
-                    if (style["strokeWeight"] != null) p.strokeWeight(style["strokeWeight"]);
+                    if (style["strokeWeight"] != null) p.strokeWeight(style["strokeWeight"] * p.canvasScale);
                 }
                 
                 if ("fill" in style) {
-                    if (style["fill"] == null) p.noFill();
+                    if (style["fill"] == null) p.fill('rgba(255, 255, 255, 0)');
                     else                       p.fill(style["fill"]);
                 }
             }
@@ -470,9 +472,9 @@
         let div_elem_{{loop.index0}} = document.getElementById('scene_{{loop.index0}}');
         let model_{{loop.index0}} = {"id": {{loop.index0}}, "objects": JSON.parse('{{scene["objects"]|safe}}'), "show_sphere": {{scene["show_sphere"]}}};
         {% if scene["type"] == "S2Scene": %}
-        let sketch_view_{{loop.index0}} = window.createSketchViewS2(model_{{loop.index0}}, {{loop.index0}});
+        let sketch_view_{{loop.index0}} = window.createSketchViewS2(model_{{loop.index0}}, {{loop.index0}}, {{scene["width"]}}, {{scene["height"]}});
         {% else: %}
-        let sketch_view_{{loop.index0}} = window.createSketchViewE2(model_{{loop.index0}}, {{loop.index0}});
+        let sketch_view_{{loop.index0}} = window.createSketchViewE2(model_{{loop.index0}}, {{loop.index0}}, {{scene["scale"]}}, {{scene["width"]}}, {{scene["height"]}});
         {% endif %}
         let sketch_{{loop.index0}} = new p5(sketch_view_{{loop.index0}}, div_elem_{{loop.index0}});
 
