Added frameRate to multiview

--- a/koebe/graphics/flask/templates/multiview.html
+++ b/koebe/graphics/flask/templates/multiview.html
@@ -66,6 +66,7 @@
                 p.frame = 0;
                 p.scene_id = scene_id;
                 sketch3d = p;
+                p.frameRate(60);
             }
             
             p.setStyle = function(style) {
@@ -282,6 +283,7 @@
 
                 p.w = w;
                 p.h = h;
+                p.frameRate(60);
 
                 p.pan_and_zoom = pan_and_zoom;
 
